# src/common/type.ts
@@ -1,4 +1,4 @@
 export type UserPayload = {
-    email: string;
-    password: string;
+  email: string;
+  password: string;
 };
